# openplainsinc.github.io

./: .gitignore  .nojekyll  .pre-commit-config.yaml  CNAME  README.md  _quarto.yml  build_md.py  index.html  index.qmd  listings.json  pyproject.toml  renovate.json  requirements.txt  robots.txt  search.json  sitemap.xml  theme.scss
.claude/: CLAUDE.md
.github/workflows/: apt.txt  code-quality.yml  pr-check.yml  publish.yml  zizmor.yml
content/blog/: emoji_geomorphometry.qmd  emoji_geomorphometry.quarto_ipynb  index.qmd  why_use_grass_in_2026.qmd
content/blog/.jupyter_cache/: global.db
content/notebooks/: index.qmd  t_stac_tutorial.html
content/notebooks/actinia/: _basics_actinia.ipynb  basics_actinia.ipynb  basics_actinia.qmd  basics_actinia.quarto_ipynb
content/notebooks/hurricane_helene_2024/: .gitignore  download.py  photogrametry.html  photogrametry.qmd  photogrametry.quarto_ipynb  reproject.json  tiledb_config.json
content/notebooks/stac_tutorial/: .gitignore  _t_stac_tutorial.ipynb  t_stac_tutorial.html  t_stac_tutorial.ipynb  t_stac_tutorial.qmd  t_stac_tutorial.quarto_ipynb
content/notebooks/us_doi/: grass_jupyter.html
content/presentations/: foss4gna_2024_case_studies.html  foss4gna_2024_case_studies.qmd  foss4gna_2024_openplains.html  foss4gna_2024_openplains.qmd  index.qmd
content/templates/: title-slide.html  tutorial-frontmatter.qmd
content/themes/: grass.scss
content/workshops/: index.qmd
docs/: index.html  listings.json  search.json
notebooks/: grass_jupyter.html  t_stac_tutorial.html
site_libs/bootstrap/: bootstrap.min.css
(+41 files in other folders)
