[project]
name = "openplainsinc-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.4.0",
    "folium>=0.15.1",
    "gdal==3.8.4",
    "geemap>=0.34.1",
    "geopandas>=1.0.1",
    "ipykernel>=6.7.0",
    "ipyleaflet>=0.19.0",
    "ipywidgets>=8.1.6",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "jupyterlab-widgets>=3.0.15",
    "laspy>=2.0.3",
    "lonboard>=0.1.0",
    "matplotlib>=3.9",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "polars>=1.30.0",
    "psutil>=7.0.0",
    "pyodm>=1.5.12",
    "pyogrio>=0.9.0",
    "pystac>=1.10.1",
    "pystac-client>=0.8.3",
    "pythreejs>=2.4.1",
    "pyvista>=0.44",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shapely>=2.0.6",
    "torch>=2.7.0",
    "torchgeo>=0.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.66.3",
    "vtk>=9.2.6",
]
